--- a/styles.css
+++ b/styles.css
@@ -14,95 +14,108 @@ body {
 /* NAV SECTION */
 
 .nav-container {
+  /* width: 900px;
   display: flex;
-  width: 900px;
-  margin-top: 10px;
+  margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
   height: 80px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 
-/* .nav-logo {
-
-} */
+.nav-logo {
+  /* width: 20%; */
+}
 
 .nav-img {
-  width: 100px;
+  /* width: 100%; */
 }
 
 .nav-links {
-  width: 600px;
+  /* width: 90%;
   display: flex;
   height: 50px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 
 .nav-link {
-  text-decoration: none;
+  /* text-decoration: none;
   font-size: 1.1rem;
   font-weight: 500;
   font-weight: bold;
-  color: #051b30;
+  color: #051b30; */
 }
 .hero {
-  width: 900px;
+  /* width: 900px;
   height: 600px;
-  background-color: #e5e5e5;
-  position: relative;
-  border-radius: 10px;
+  background-color: #e5e5e5; */
+  /* position: relative; */
+  /* border-radius: 10px;
   /* padding: 10px; */
-  margin-top: 40px;
-  display: flex;
+  /* margin-top: 40px; */
+  /* display: flex;
   flex-direction: column;
   box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
     0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
-    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
+    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075); */
 }
 .banner {
   /* background-color: gray; */
-  display: flex;
-  width: 880px;
+  /* display: flex;
+  width: 98%;
   height: 100px;
-  align-items: center;
-  justify-content: center;
+  align-items: center; */
+  /* justify-content: center; */
 }
-.banner-top-left h1 {
+.banner-top-left {
+  /* display: flex;
+  width: 42%;
+  color: #051b30; */
+
+  /* justify-content: end; */
+}
+/* .banner-top-left h1 {
   margin-left: 70px;
   color: #051b30;
-}
-/* .banner-center {
 } */
+.banner-center {
+  /* width: 12%;
+  display: flex; */
+}
 .banner-logo {
-  width: 120px;
+  /* width: 100%; */
 }
 
-.banner-top-right h1 {
-  margin-right: 70px;
-  color: #051b30;
+.banner-top-right {
+  /* margin-right: 70px; */
+  /* display: flex;
+  width: 42%;
+  color: #051b30; */
 }
 
-/* .img-container {
-} */
+.img-container {
+  /* display: flex; */
+}
 .hero-img {
-  width: 800px;
+  /* width: 90%;
+  margin: 0 auto;
   border-radius: 10px;
   box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
     0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
-    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
+    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075); */
 }
 .hero-msg {
-  width: 350px;
+  /* width: 50%;
   background-color: #0542ae;
   color: #e5e5e5;
   display: flex;
   padding: 10px;
   position: absolute;
   z-index: 1;
-  bottom: 22px;
-  margin-left: auto;
+  /* bottom: 22px; */
+  /* margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
@@ -111,20 +124,21 @@ body {
     0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
   color: black;
-  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
+  -webkit-text-fill-color: white; Will override color (regardless of order) */
+  /* -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;  */
 }
 .hero-txt {
-  font-style: italic;
-  font-size: 2rem;
+  /* font-style: italic;
+  font-size: 2rem; */
 }
 
-/* .cal-banner {
-} */
+.cal-banner {
+  width: 98%;
+}
 
 .banner-main-title {
-  width: 880px;
+  width: 100%;
   height: 80px;
   display: flex;
   flex-direction: column;
@@ -134,8 +148,9 @@ body {
   font-size: 1.8rem;
 }
 .calendario {
-  width: 880px;
-  /* background-color: #d4d2d5; */
+  width: 100%;
+
+  /* background-color: purple; */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
@@ -148,16 +163,17 @@ body {
 }
 
 .inner-box {
+  background-color: #0542ae;
   display: flex;
   flex-direction: column;
+  gap: 10px;
   align-items: center;
   justify-content: space-around;
   background-color: #fff;
-
   color: #051b30;
   font-weight: 600;
-  height: 200px;
-  width: 275px;
+  height: 100%;
+  width: 90%;
   border: 2px solid #0542ae;
   border-radius: 10px;
   box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
@@ -185,7 +201,7 @@ body {
   /* min-height: 60px; */
   /* min-width: 0; */
   outline: none;
-  padding: 6px 12px;
+  padding: 3px 6px;
   text-align: center;
   text-decoration: none;
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -281,8 +297,7 @@ body {
   font-style: italic;
 }
 .preg-img {
-  height: 250px;
-  width: 250px;
+  width: 70%;
   border-radius: 10px;
 }
 .vol-section {
@@ -303,8 +318,7 @@ body {
 }
 
 .vol-img {
-  height: 250px;
-  width: 250px;
+  width: 70%;
   border-radius: 10px;
 }
 
@@ -325,9 +339,9 @@ body {
 /* sponser sec */
 #sponser-section {
   width: 900px;
-  height: 450px;
+  height: auto;
   background-color: #e5e5e5;
-  position: relative;
+  /* position: relative; */
   border-radius: 10px;
   /* padding: 10px; */
   margin-top: 40px;
@@ -340,7 +354,7 @@ body {
 }
 
 .sponser-banner-title {
-  width: 880px;
+  width: 100%;
   height: 80px;
   display: flex;
   flex-direction: column;
@@ -351,9 +365,9 @@ body {
   /* font-size: 1.8rem; */
 }
 .sponser-name-sections {
-  display: flex;
-  height: 500px;
-  width: 800px;
+  /* display: flex; */
+  /* height: 500px; */
+  /* width: 98%; */
   justify-content: space-between;
   align-items: center;
   padding-bottom: 8px;
@@ -422,4 +436,226 @@ body {
 
 .copyright {
   font-size: 0.6rem;
+}
+/* 
+@media (min-width: 320px) {
+  .nav-container {
+    width: 300px;
+    height: auto;
+  }
+  .hero {
+    width: 300px;
+    margin: 0 auto;
+  }
+
+  .calendario {
+    width: 300px;
+  }
+  #info {
+    width: 300px;
+  }
+  #sponser-section {
+    width: 300px;
+  }
+  .footer {
+    width: 300px;
+  }
+} */
+@media (min-width: 320px) {
+  /* smartphones, iPhone, portrait 480x320 phones */
+
+  /* body {
+    max-width: 320px;
+    height: auto;
+  } */
+  .nav-container {
+    width: 90%;
+    margin: 10px auto;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .nav-logo {
+    width: 10%;
+  }
+  .nav-img {
+    width: 100%;
+  }
+  .nav-links {
+    width: 90%;
+    display: flex;
+    height: auto;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .nav-link {
+    color: #051b30;
+    font-weight: bold;
+    font-size: 0.7rem;
+    text-decoration: none;
+  }
+
+  .hero {
+    width: 90%;
+    height: auto;
+    background-color: #e5e5e5;
+    position: relative;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0px auto 20px auto;
+    box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
+      0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+      0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
+  }
+
+  .banner {
+    display: flex;
+    width: 98%;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+  }
+  .banner-top-left {
+    flex: 2;
+    color: #051b30;
+    text-align: end;
+  }
+
+  .banner-top-left h1 {
+    font-size: 1rem;
+  }
+  .banner-center {
+    flex: 1;
+    text-align: center;
+  }
+  .banner-logo {
+    width: 80%;
+  }
+  .banner-top-right {
+    flex: 2;
+    color: #051b30;
+    text-align: start;
+  }
+  .banner-top-right h1 {
+    /* margin-right: 70px; */
+    font-size: 1rem;
+  }
+  .img-container {
+    display: flex;
+  }
+  .hero-img {
+    width: 90%;
+    border-radius: 10px;
+    box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
+      0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+      0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
+    margin: 0px auto 30px auto;
+  }
+
+  /* sasa */
+  .hero-msg {
+    width: 50%;
+    background-color: #0542ae;
+    color: #e5e5e5;
+    display: flex;
+    bottom: 7%;
+    position: absolute;
+    padding: 2px;
+    z-index: 1;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    border-radius: 5px;
+    box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
+      0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+      0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
+    -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+  }
+
+  .hero-txt {
+    font-style: italic;
+    font-size: 1rem;
+  }
+  .cal-banner {
+    width: 98%;
+  }
+  .banner-main-title {
+    font-size: 1rem;
+  }
+
+  .calendario {
+    width: 300px;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 10px;
+  }
+  .inner-box {
+    font-weight: 400;
+    font-size: small;
+  }
+
+  .cal-btn {
+    font-size: 0.5;
+    font-size: small;
+  }
+  .cal-info {
+    width: 98%;
+    padding: 0 10px;
+    text-align: center;
+  }
+
+  #info {
+    margin: 0 10px;
+    height: auto;
+  }
+
+  .preguntas-section {
+    display: flex;
+    flex-direction: column;
+  }
+  .preg-left-side h2,
+  a {
+    font-size: small;
+    font-weight: 400;
+  }
+  .vol-section {
+    display: flex;
+    flex-direction: column;
+  }
+  .vol-right-side h2,
+  p {
+    font-size: small;
+  }
+
+  #sponser-section {
+    width: max-content;
+    margin: 10px 10px;
+  }
+
+  .sponser-banner-title {
+    font-size: small;
+    text-align: center;
+  }
+
+  .sponser-name-sections {
+    display: flex;
+    height: auto;
+    width: auto;
+    margin: 5px 5px;
+
+    .footer {
+      width: 300px;
+    }
+  }
+}
+@media (min-width: 481px) {
+  /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+}
+@media (min-width: 641px) {
+  /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
 }
